tests/miniJava/pos/000695_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) System.out.println ( { } ) ; else if ( 0 ) { } else { } } }
