tests/miniJava/neg/003842_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if System.out.println 0 ) { } else { } } }
